US2014 Fixed collapsed state on desktop filters

--- a/src/Web/Sfa.Das.Sas.Web/Content/src/styles/_elements.scss
+++ b/src/Web/Sfa.Das.Sas.Web/Content/src/styles/_elements.scss
@@ -2385,7 +2385,9 @@ details .arrow {
             }   
         }
         #EditSearch {
-            display: none
+            @media (max-width: 640px) {
+                display: none
+            }
         }
     }
 }
